Footer no longer breaks on large screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,16 +19,9 @@ $mat-toolbar-row-padding: 16px !default;
 
 /*--------------------------- Large screens --------------------------------*/
 
-@media only screen and (max-width: 1400px) {
+@media only screen and (min-width: 1400px) {
     @include mat-toolbar-height($mat-toolbar-height-desktop);
-    .md-medium-tall {
-        opacity:0.7;
-        margin-top: 30%;
-        position: relative;
-        bottom:0;
-        background: #3E5062;
-        overflow: hidden;
-    }
+    
     .md-medium-tall p {
         font-size: 0.9em;
         height: 18px;
@@ -46,5 +39,15 @@ $mat-toolbar-row-padding: 16px !default;
         height: 12px;
 
     }
+}
+
+/*--------------------------- General --------------------------------*/
+.md-medium-tall {
+    opacity:0.7;
+    //margin-top: 30%;
+    position: relative;
+    bottom:0px;
+    background: #3E5062;
+    overflow: hidden;
 }
 
